// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"interface Foo {
  B: string; // -> field

  new (); // -> constructor
  ~~~~~~~ Member new should be declared before all field definitions.

  A(): void; // -> method
  ~~~~~~~~~~ Member A should be declared before all field definitions.

  [Z: string]: any; // -> signature
  ~~~~~~~~~~~~~~~~~ Member Z should be declared before all field definitions.
}
"
`;

exports[` 2`] = `
"type Foo = {
  B: string; // -> field

  // no constructor

  A(): void; // -> method
  ~~~~~~~~~~ Member A should be declared before all field definitions.

  // no signature
};
"
`;

exports[` 3`] = `
"class Foo {
  private C: string; // -> field
  public D: string; // -> field
  protected static E: string; // -> field

  constructor() {} // -> constructor
  ~~~~~~~~~~~~~~~~ Member constructor should be declared before all field definitions.

  public static A(): void {} // -> method
  ~~~~~~~~~~~~~~~~~~~~~~~~~~ Member A should be declared before all field definitions.
  public B(): void {} // -> method
  ~~~~~~~~~~~~~~~~~~~ Member B should be declared before all field definitions.

  [Z: string]: any; // -> signature
  ~~~~~~~~~~~~~~~~~ Member Z should be declared before all field definitions.
}
"
`;

exports[` 4`] = `
"const Foo = class {
  private C: string; // -> field
  public D: string; // -> field

  constructor() {} // -> constructor
  ~~~~~~~~~~~~~~~~ Member constructor should be declared before all field definitions.

  public static A(): void {} // -> method
  ~~~~~~~~~~~~~~~~~~~~~~~~~~ Member A should be declared before all field definitions.
  public B(): void {} // -> method
  ~~~~~~~~~~~~~~~~~~~ Member B should be declared before all field definitions.

  [Z: string]: any; // -> signature
  ~~~~~~~~~~~~~~~~~ Member Z should be declared before all field definitions.

  protected static E: string; // -> field
};
"
`;

exports[` 5`] = `
"interface Foo {
  [Z: string]: any; // -> signature

  A(): void; // -> method

  new (); // -> constructor

  B: string; // -> field
}
"
`;

exports[` 6`] = `
"type Foo = {
  // no signature

  A(): void; // -> method

  // no constructor

  B: string; // -> field
};
"
`;

exports[` 7`] = `
"class Foo {
  [Z: string]: any; // -> signature

  public static A(): void {} // -> method
  public B(): void {} // -> method

  constructor() {} // -> constructor

  private C: string; // -> field
  public D: string; // -> field
  protected static E: string; // -> field
}
"
`;

exports[` 8`] = `
"const Foo = class {
  [Z: string]: any; // -> signature

  public static A(): void {} // -> method
  public B(): void {} // -> method

  constructor() {} // -> constructor

  private C: string; // -> field
  public D: string; // -> field
  protected static E: string; // -> field
};
"
`;

exports[` 9`] = `
"class Foo {
  private C: string; // (irrelevant)

  public D: string; // (irrelevant)

  public static E: string; // -> public static field

  constructor() {} // (irrelevant)

  public static A(): void {} // (irrelevant)

  [Z: string]: any; // (irrelevant)

  public B(): void {} // -> public instance method
  ~~~~~~~~~~~~~~~~~~~ Member B should be declared before all public static field definitions.
}
"
`;

exports[` 10`] = `
"const Foo = class {
  private C: string; // (irrelevant)

  [Z: string]: any; // (irrelevant)

  public static E: string; // -> public static field

  public D: string; // (irrelevant)

  constructor() {} // (irrelevant)

  public static A(): void {} // (irrelevant)

  public B(): void {} // -> public instance method
  ~~~~~~~~~~~~~~~~~~~ Member B should be declared before all public static field definitions.
};
"
`;

exports[` 11`] = `
"class Foo {
  public B(): void {} // -> public instance method

  private C: string; // (irrelevant)

  public D: string; // (irrelevant)

  public static E: string; // -> public static field

  constructor() {} // (irrelevant)

  public static A(): void {} // (irrelevant)

  [Z: string]: any; // (irrelevant)
}
"
`;

exports[` 12`] = `
"const Foo = class {
  public B(): void {} // -> public instance method

  private C: string; // (irrelevant)

  [Z: string]: any; // (irrelevant)

  public D: string; // (irrelevant)

  constructor() {} // (irrelevant)

  public static A(): void {} // (irrelevant)

  public static E: string; // -> public static field
};
"
`;

exports[` 13`] = `
"class Foo {
  private E: string; // -> instance field

  private static B: string; // -> static field
  ~~~~~~~~~~~~~~~~~~~~~~~~~ Member B should be declared before all instance field definitions.
  protected static C: string; // -> static field
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~ Member C should be declared before all instance field definitions.
  private static D: string; // -> static field
  ~~~~~~~~~~~~~~~~~~~~~~~~~ Member D should be declared before all instance field definitions.

  public static A: string; // -> public static field
  ~~~~~~~~~~~~~~~~~~~~~~~~ Member A should be declared before all instance field definitions.

  [Z: string]: any; // (irrelevant)
}
"
`;

exports[` 14`] = `
"const foo = class {
  public T(): void {} // method (irrelevant)

  private static B: string; // -> static field

  constructor() {} // constructor (irrelevant)

  private E: string; // -> instance field

  protected static C: string; // -> static field
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~ Member C should be declared before all instance field definitions.
  private static D: string; // -> static field
  ~~~~~~~~~~~~~~~~~~~~~~~~~ Member D should be declared before all instance field definitions.

  [Z: string]: any; // signature (irrelevant)

  public static A: string; // -> public static field
  ~~~~~~~~~~~~~~~~~~~~~~~~ Member A should be declared before all static field definitions.
};
"
`;

exports[` 15`] = `
"class Foo {
  public static A: string; // -> public static field

  private static B: string; // -> static field
  protected static C: string; // -> static field
  private static D: string; // -> static field

  private E: string; // -> instance field

  [Z: string]: any; // (irrelevant)
}
"
`;

exports[` 16`] = `
"const foo = class {
  [Z: string]: any; // -> signature (irrelevant)

  public static A: string; // -> public static field

  constructor() {} // -> constructor (irrelevant)

  private static B: string; // -> static field
  protected static C: string; // -> static field
  private static D: string; // -> static field

  private E: string; // -> instance field

  public T(): void {} // -> method (irrelevant)
};
"
`;

exports[` 17`] = `
"class Foo {
  private C: string; // -> field
  public D: string; // -> field
  protected static E: string; // -> field

  constructor() {} // -> constructor
  ~~~~~~~~~~~~~~~~ Member constructor should be declared before all field definitions.

  public static A(): void {} // -> method
  ~~~~~~~~~~~~~~~~~~~~~~~~~~ Member A should be declared before all field definitions.
  public B(): void {} // -> method
  ~~~~~~~~~~~~~~~~~~~ Member B should be declared before all field definitions.
}
"
`;

exports[` 18`] = `
"class Foo {
  public static A(): void {} // -> method
  public B(): void {} // -> method

  constructor() {} // -> constructor

  private C: string; // -> field
  public D: string; // -> field
  protected static E: string; // -> field
}
"
`;

exports[` 19`] = `
"const foo = class {
  private C: string; // -> field
  public D: string; // -> field
  protected static E: string; // -> field

  constructor() {} // -> constructor
  ~~~~~~~~~~~~~~~~ Member constructor should be declared before all field definitions.

  public static A(): void {} // -> method
  ~~~~~~~~~~~~~~~~~~~~~~~~~~ Member A should be declared before all field definitions.
  public B(): void {} // -> method
  ~~~~~~~~~~~~~~~~~~~ Member B should be declared before all field definitions.
};
"
`;

exports[` 20`] = `
"const foo = class {
  public static A(): void {} // -> method
  public B(): void {} // -> method

  constructor() {} // -> constructor

  private C: string; // -> field
  public D: string; // -> field
  protected static E: string; // -> field
};
"
`;

exports[` 21`] = `
"interface Foo {
  B: string; // -> field

  new (); // -> constructor
  ~~~~~~~ Member new should be declared before all field definitions.

  A(): void; // -> method
  ~~~~~~~~~~ Member A should be declared before all field definitions.

  [Z: string]: any; // -> signature
  ~~~~~~~~~~~~~~~~~ Member Z should be declared before all field definitions.
}
"
`;

exports[` 22`] = `
"interface Foo {
  [Z: string]: any; // -> signature

  A(): void; // -> method

  new (); // -> constructor

  B: string; // -> field
}
"
`;

exports[` 23`] = `
"type Foo = {
  B: string; // -> field

  A(): void; // -> method
  ~~~~~~~~~~ Member A should be declared before all field definitions.

  new (); // -> constructor
  ~~~~~~~ Member new should be declared before all field definitions.

  [Z: string]: any; // -> signature
  ~~~~~~~~~~~~~~~~~ Member Z should be declared before all field definitions.
};
"
`;

exports[` 24`] = `
"type Foo = {
  [Z: string]: any; // -> signature

  A(): void; // -> method

  new (); // -> constructor

  B: string; // -> field
};
"
`;

exports[` 25`] = `
"interface Foo {
  a: x;
  B: x;
  ~~~~~ Member B should be declared before member a.
  c: x;

  B(): void;
  c(): void;
  a(): void;
}
"
`;

exports[` 26`] = `
"interface Foo {
  B: x;
  a: x;
  c: x;

  B(): void;
  a(): void;
  c(): void;
}
"
`;

exports[` 27`] = `
"interface Foo {
  B(): void;
  c(): void;
  a(): void;
  ~~~~~~~~~~ Member a should be declared before member c.

  a: x;
  B: x;
  c: x;
}
"
`;

exports[` 28`] = `
"interface Foo {
  B(): void;
  a(): void;
  c(): void;

  B: x;
  a: x;
  c: x;
}
"
`;

exports[` 29`] = `
"interface Foo {
  B: x;
  a: x;
  ~~~~~ Member a should be declared before member B.
  c: x;

  B(): void;
  c(): void;
  a(): void;
}
"
`;

exports[` 30`] = `
"interface Foo {
  a: x;
  B: x;
  c: x;

  a(): void;
  B(): void;
  c(): void;
}
"
`;

exports[` 31`] = `
"interface Foo {
  b(): void;
  a: boolean;
  ~~~~~~~~~~~ Member a should be declared before member b.

  [a: string]: number;
  new (): Bar;
  (): Baz;
  ~~~~~~~~ Member call should be declared before member new.
}
"
`;

exports[` 32`] = `
"interface Foo {
  [a: string]: number;
  a: boolean;
  b(): void;

  (): Baz;
  new (): Bar;
}
"
`;

exports[` 33`] = `
"interface Foo {
  a: boolean;
  ~~~~~~~~~~~ Member a should be declared after all optional members.
  b?: number;
  c: string;
}
"
`;

exports[` 34`] = `
"interface Foo {
  b?: number;
  a: boolean;
  c: string;
}
"
`;

exports[` 35`] = `
"interface Foo {
  a: boolean;
  b?: number;
  ~~~~~~~~~~~ Member b should be declared after all required members.
  c: string;
}
"
`;

exports[` 36`] = `
"interface Foo {
  a: boolean;
  c: string;
  b?: number;
}
"
`;
